@@ -1,3 +1,10 @@
+2007-04-16  Ali Afshar <aafshar@gmail.com>
+
+	reviewed by: Johan Dahlin  <jdahlin@async.com.br>
+
+	* kiwi/ui/objectlist.py:
+	Do not set a pixbuf if the data value is None. Fixes #3310
+
 2007-04-10  Johan Dahlin  <jdahlin@async.com.br>
 
 	* kiwi/ui/proxywidget.py (ProxyWidgetMixin._as_string): Provide
